--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SpeechRecognizer</string>
+    <string name="restartClient">(re)start client</string>
+    <string name="ipEditText">ip address</string>
 </resources>
