fixed receiving messages from server added a button to close connection between client and server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SpeechRecognizer</string>
     <string name="restartClient">(re)start client</string>
     <string name="ipEditText">ip address</string>
+    <string name="closeConnection">Close connection</string>
 </resources>
